--- a/Algebra/temp_note.tex
+++ b/Algebra/temp_note.tex
@@ -30,11 +30,23 @@
 \newtheorem{rem}[thm]{Remark}
 \newtheorem{ex}{Exercise}[section]
 
+
 % TODO: replace these with your information
 % TODO: replace these with your information
 \author{Evan Fox}
-\title{MTH 525: Topology}
+\title{Algebra}
 
 \begin{document}
 \maketitle
+\begin{chapter}{Ch1}
+
+\begin{section}{sec}
+
+
+
+\end{section}
+
+\end{chapter}
+
+
 \end{document}
