--- a/Algebra/Rings/rings.tex
+++ b/Algebra/Rings/rings.tex
@@ -44,7 +44,7 @@
 \begin{chapter}{Rings}
 
 \begin{section}{Integral domains and division rings}
-    
+
     
     \begin{defn}
         Let $R$ be a set and define $+:R \times R \to R$ denoted $(a, b) \mapsto a + b$ and $\cdot: R \times R \to R$ denoted $(a, b) \mapsto ab$
@@ -58,7 +58,7 @@
 
         Then $R$ is a ring. 
     \end{defn}
-If the multiplication on $R$ is commutative then we say that $R$ is a commutative ring. Note in general there need not exist $1 \in R$ satisfying $1 \cdot a = a$ for all $a \in R$, 
+If the multiplication on $R$ is communitive then we say that $R$ is a communitive ring. Note in general there need not exist $1 \in R$ satisfying $1 \cdot a = a$ for all $a \in R$, 
 since $(R, \cdot)$ is not necessarily a group. An informal way of defining a ring is just to consider a set where addition, subtraction, and multiplication make sense. 
 
     
@@ -76,14 +76,14 @@ since $(R, \cdot)$ is not necessarily a group. An informal way of defining a rin
     \begin{proof}
         For the first statement note 
         \[0b = (0 + 0)b = 0b = 0b + 0b\]
-        since $R$ is a group under addition we may make full use of the cancellation property which gives $0 = 0b$. 
+        since $R$ is a group under addition we may make full use of the cancelation property which gives $0 = 0b$. 
         Next observe, 
         \[(-a)b + ab = ((-a) + a)b = 0b = 0 \]
-        so that $ab$ is the additive inverse of $(-a)b$. The proof of the last result is similar. 
+        so that $ab$ is the additive inverse of $(-a)b$. The proof of the last result is simillar. 
 
     \end{proof}
 
-The definition of a ring is very general, some classic examples are the integers (mod n), matrices, and continuous functions. Showing these are rings is easy. 
+The definition of a ring is very general, some classic examples are the integers (mod n), matrices, and continous functions. Showing these are rings is easy. 
     
     \begin{rem}
         Let $R$ be a ring and $S$ a non-empty set. Recall $R^S$ denotes the set of functions $f: S \to R$. Give a addition and multiplication that turns 
@@ -307,7 +307,7 @@ A field is a very important structure in mathematics and we will have much more 
         $r \mapsto r+ M$. Now let $U$ be an ideal containg $M$ then 
         \[\phi(U) = \{u + M| u \in U\} \] 
          Since $M \subseteq U$ we know $M \in \phi(U)$. Now for $a, b \in U$ we have $a + M, b + M \in \phi(U)$ so 
-         \[a + M - b + M = (a -b )+ M \in \phi(U)\]
+         \[a + M - b + M = (a -b ) + M \in \phi(U)\]
          since $a-b \in U$. Now for $r \in R$ we have $r + M \in \phi(R)$ and 
          \[(a + M)(r + M) = (ar) + M \in \phi(U)\]
          hence $\phi(U)$ is an ideal of $R \B M$. 
