--- a/Analysis/HW_preamble.tex
+++ b/Analysis/HW_preamble.tex
@@ -16,13 +16,7 @@
 \newcommand{\hwemail}{efox20@uri.edu}
 \newcommand{\hwtype}{Chapter}
 \newcommand{\hwnum}{1}
-\newcommand{\hwclass}{Understanding Analysis}
+\newcommand{\hwclass}{Analysis}
 \newcommand{\hwlecture}{}
 \newcommand{\hwsection}{}
 
-\begin{document}
-\maketitle
-
-% Your content
-
-\end{document}
