--- a/Topology/notes.tex
+++ b/Topology/notes.tex
@@ -9,6 +9,9 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\T}{\mathfrak{T}}
+\newcommand{\B}{\mathfrak{B}}
+\newcommand{\C}{\mathfrak{C}}
 \newcommand{\ran}{\operatorname{ran}}
 \newcommand{\dom}{\operatorname{dom}}
 \newcommand{\eps}{\varepsilon}
@@ -37,4 +40,6 @@
 
 \begin{document}
 \maketitle
+
+\include{Topology_and_basis.tex}
 \end{document}
