--- a/Topology/HW_preamble.tex
+++ b/Topology/HW_preamble.tex
@@ -4,6 +4,9 @@
 \newcommand{\N}{\mathbb{N}}
 \newcommand{\Q}{\mathbb{Q}}
 \newcommand{\Z}{\mathbb{Z}}
+\newcommand{\T}{\mathfrak{T}}
+\newcommand{\B}{\mathfrak{B}}
+\newcommand{\C}{\mathfrak{C}}
 \newcommand{\ran}{\operatorname{ran}}
 \newcommand{\dom}{\operatorname{dom}}
 \newcommand{\eps}{\varepsilon}
@@ -14,9 +17,9 @@
 % TODO: replace these with your information
 \newcommand{\hwname}{Evan Fox}
 \newcommand{\hwemail}{efox20@uri.edu}
-\newcommand{\hwtype}{Homework}
-\newcommand{\hwnum}{1}
-\newcommand{\hwclass}{MTH 316}
+\newcommand{\hwtype}{Chapter}
+\newcommand{\hwnum}{}
+\newcommand{\hwclass}{Topology: 525}
 \newcommand{\hwlecture}{}
 \newcommand{\hwsection}{}
 
