--- a/Matlab/u.tex
+++ b/Matlab/u.tex
@@ -1,12 +1,15 @@
 \documentclass[11 pt]{article}
-
-\author{Evan }
+\usepackage[]{graphicx}
+\author{Claire Thomas }
 \title{Title}
 
 \begin{document}
 \maketitle
+\newpage 
 
-\begin{section}
-    
-\end{section}
+\begin{figure}[ht!]
+    \centering
+    \includegraphics[width=90mm]{Screenshot 2022-08-11 131033.png}
+    \caption{A simple caption \label{overflow}}
+    \end{figure}
 \end{document}
