--- a/Topology/notes.tex
+++ b/Topology/notes.tex
@@ -40,6 +40,7 @@
 
 \begin{document}
 \maketitle
-
+\tableofcontents
 \include{Topology_and_basis.tex}
+\include{Order_Product_topology.tex}
 \end{document}
