--- a/Topology/HW_preamble.tex
+++ b/Topology/HW_preamble.tex
@@ -17,9 +17,9 @@
 % TODO: replace these with your information
 \newcommand{\hwname}{Evan Fox}
 \newcommand{\hwemail}{efox20@uri.edu}
-\newcommand{\hwtype}{Chapter}
+\newcommand{\hwtype}{}
 \newcommand{\hwnum}{}
-\newcommand{\hwclass}{Topology: 525}
+\newcommand{\hwclass}{MTH 525: Topology}
 \newcommand{\hwlecture}{}
 \newcommand{\hwsection}{}
 
