--- a/Topology/notes.tex
+++ b/Topology/notes.tex
@@ -31,7 +31,7 @@
 \newtheorem{cor}[thm]{Corollary}
 \newtheorem{prop}[thm]{Proposition}
 \newtheorem{rem}[thm]{Remark}
-\newtheorem{ex}{Exercise}[section]
+\newtheorem{ex}{Example}[section]
 
 % TODO: replace these with your information
 % TODO: replace these with your information
