--- a/Analysis/HW1.tex
+++ b/Analysis/HW1.tex
@@ -3,7 +3,110 @@
 \maketitle
 
 \question
-here
-% Your content
+Show that there doesn't exist a rational number $s$ such that $s^2 = 6$. 
 
+
+\begin{proof}
+    First we prove that $6|a^2 \implies 6|a$. Suppose that $6$ does not devide $a$ and let $a = p_1p_2 \dots p_n$ 
+    be the prime factorization of $6$, then we know that $3$ and $2$ cannot both be common factors,  
+    But then since $2$ and $3$ are prime they cannot be the square of a prime number, hence $2$ and $3$ cannot both 
+    appear in $a^2 = p_1^2 p_2^2 \dots p_n^2$, hence $6$ does not devide $a^2$. It now follows by contrapositive that 
+    if $6|a^2$ then $6|a$. 
+
+    Now assume there exists $a, b \in \N$ such that 
+    \[6 = (\frac{a}{b})^2 \]
+    If $a$ and $b$ have any common factors we may cancel them out, so we assume $(a, b) = 1$. 
+    Then $6b^2 = a^2$ implies $6|a$ so we may fix $m \in \Z$ such that $6m = a$. Then 
+    $6b^2 = (6m)^2$ implies $b^2 = 6m^2$ and $6|b$; thus $a$ and $b$ share a common factor, 
+    a contradiction. 
+
+\end{proof}
+
+\question
+If $a, b \in \R$ show that $|a + b| = |a| + |b| $ iff $ab \geq 0$. 
+
+
+\begin{proof}
+    For the forward direction we use contrapositive, assume $ab < 0$ then without loss of generality assume $a > 0$ and $b<0$, we show that 
+    \[|a +b | \neq |a| + |b| \] 
+    we have by our assumtions on $a$ and $b$ that $|a| + |b| = a - b$. 
+    Now there are three cases (by tricotomy) for what $|a+b|$ can map to, if $|a + b| = 0$
+    we are done since $| a| + |b| > 0$. 
+    If $a + b$ is poisitve $|a + b| = a + b$, but then $a + b = a - b$ would imply $b = 0$, contradicting our assumtion on $b$.
+    If $a + b$ is negative $|a + b| = -a -b$, but now $-a -b = a - b$ would force $a = 0$, contradicting our assumtion on $a$. 
+    Hence, in every case equality does not hold. This proves the first direction.
+    
+    Now assume $ab \geq 0$, if either is equal to zero we are done. If they are both posisitive it follows since $a + b$ will be posistive giving 
+    \[|a + b| = a + b = |a| + |b|.\]
+    Then if they are both negative, their sum will be negitive so,
+    \[|a + b| = -a - b = |a| + |b|\]
+    completing the opposite direction. 
+\end{proof}
+
+\question 
+Find all $x \in \R$ that satisfy the inequality 
+\[ 4 < |x + 2| + |x - 1| < 5. \] 
+
+
+\begin{proof}
+    The terms $x + 2$, $x - 1$ have different signs only if $x \in (-2, 1)$ but it is clear 
+    no such $x$ is a solution, so assume $x \notin (-2, 1)$, then the terms have the same sign and by the above we may add them 
+    to get 
+    \[4 < |2x +1 | < 5\]
+    which we may split into $4 < |2x + 1| $ and $|2x + 1| < 5$. 
+    For the first case we have 
+    \[4 < |2x + 1| \implies 4 < 2x + 1 \vee 2x + 1 < -4\]
+    which gives $3/2 < x$ and $x < -5/2$; written in interval notation as $(-\infty, -5/2) \cup (3/2, \infty)$. 
+    Now for 
+    \[|2x + 1| < 5 \implies -5 < 2x + 1 < 5 \implies -6/2 < x < 4 = (-6/2, 4)\]
+    We need both conditions to be satisfied so we must take the intersection over our two solutions, 
+    \[(-\infty, -5/2) \cup (3/2, \infty) \cap (-6/2, 4) = (-6/2, -5/2) \cup (3/2, 4)\]
+\end{proof}
+
+\question 
+place holder 
+
+
+\begin{alphaparts}
+\questionpart
+
+\begin{proof}
+    Assume without loss of generality that $b < a$, then $|a - b| = a - b$. 
+    Thus 
+    \[\frac{1}{2}(a + b + |a - b|) = \frac{1}{2}(a + b + a -b ) = \frac{1}{2}(2a) = a\]
+    We also have 
+    \[\frac{1}{2}(a + b - |a - b|) = \frac{1}{2}(a + b -(a - b)) = \frac{1}{2}(2b) = b\]
+    and we are done.  
+\end{proof}
+
+\questionpart 
+
+
+\begin{proof}
+    The minimum of $a, b, c$ must be one of them, the minimum of $a, b$ must be $a$ or $b$, so 
+
+\end{proof}
+
+
+\end{alphaparts}
+
+
+\question 
+Let $S_4 = \{1 - (-1)^n/n: n \in \N\}$ find inf and sup
+
+
+\begin{proof}
+$inf S_4 = \frac{1}{2}$, $\frac{1}{2}$ is an element of $S_4$ that occurs for $n = 2$, for $n \neq 2$, if $n$ is odd we will be adding 1 which 
+gives $\frac{1}{2} < 1 + 1/n$. If $n>2$ is even we have $1/n < 1/2$ which implies $1 - 1/2 < 1 - 1/n$, so $1/2$ is the minimal element. It follows that 
+if a set contains a minimal element it is the infium since we have $1/2 < x$ for all $x \in S_4$ it is a lower bound and since it is an element of $S_4$, given any lower bound $l$, we must 
+have $l \leq 1/2$. 
+
+$sup S_4 = 2$, I proceed with a very simillar argument as above, $2$ appears in $S_4$ when $n=1$, for any $n>1$ either we are subtracting from $1$, or adding a number smaller than $1$ to $1$, in either case 
+we get somthing less than $2$. Thus $2$ is the maximal element of the set and hence it must be the supremum. 
+\end{proof}
+
+
+\question 
+Let 
+    
 \end{document}
